# uni-multi-model-agent

./: .gitignore  README.md  docker-compose.yml  render.yaml  vercel.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: orchestrator.py
backend/app/api/: dependencies.py  routes.py
backend/app/config/: settings.py
backend/app/graph/: nodes.py  state.py  workflow.py
backend/app/models/: domain.py
backend/app/planner/: __init__.py
backend/app/prompts/: templates.py
backend/app/schemas/: api.py
backend/app/services/: file_service.py  input_processor.py  llm_client.py  llm_service.py  trace_service.py
backend/app/tests/: test_agent.py
backend/app/tools/: __init__.py  audio_tool.py  base.py  code_analyzer_tool.py  cross_input_reasoner_tool.py  ocr_tool.py  pdf_parser_tool.py  sentiment_tool.py  summarizer_tool.py  youtube_tool.py
backend/app/utils/: __init__.py  helpers.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  ExtractedTextPanel.tsx  FileUpload.tsx  MessageBubble.tsx  ReasoningPanel.tsx  ToolExecutionPanel.tsx
frontend/src/components/ui/: button.tsx  card.tsx  textarea.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
