[project]
name = "universal-multimodal-agent"
version = "1.0.0"
description = "Universal Multi-Modal Agent - autonomous AI agent for text, images, PDFs, and audio"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.55.0",
    "easyocr>=1.7.2",
    "pymupdf>=1.24.0",
    "openai-whisper>=20240930",
    "youtube-transcript-api>=0.6.3",
    "pillow>=11.0.0",
    "numpy>=2.0.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "tiktoken>=0.8.0; platform_machine != 'ARM64' or sys_platform != 'win32'",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
